force-app/main/default/objects/Loss_Insight__c/Loss_Insight__c.object-meta.xml
<CustomObject>
    <description>One narrated win/loss digest. Persists the executive summary (AI or deterministic template) so the analysis is queryable and reportable.</description>
    <label>Loss Insight</label>
    <nameField>
        <displayFormat>INS-{0000}</displayFormat>
        <label>Insight Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loss Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>