force-app/main/default/objects/Loss_Insight__c/fields/Lookback_Days__c.field-meta.xml
<CustomField>
    <fullName>Lookback_Days__c</fullName>
    <description>The window (in days) this digest aggregated over.</description>
    <label>Lookback Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>