force-app/main/default/objects/Loss_Insight__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Anthropic model id used for the narrative (blank when template fallback was used).</description>
    <label>Model</label>
    <length>60</length>
    <type>Text</type>
</CustomField>