force-app/main/default/objects/Loss_Insight__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <description>The executive digest. Claude&apos;s output when it passed the figure guardrail, otherwise the deterministic template.</description>
    <label>Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>