force-app/main/default/objects/Loss_Insight__c/fields/Narrative_Source__c.field-meta.xml
<CustomField>
    <fullName>Narrative_Source__c</fullName>
    <description>Whether the narrative came from Claude (AI) or the deterministic fallback (Template).</description>
    <label>Narrative Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
                <default>true</default>
                <label>Template</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>