force-app/main/default/objects/Loss_Insight__c/fields/Process_Count__c.field-meta.xml
<CustomField>
    <fullName>Process_Count__c</fullName>
    <description>How many of the losses were Process (fixable) fault.</description>
    <label>Process Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>