force-app/main/default/objects/Loss_Insight__c/fields/Total_Losses__c.field-meta.xml
<CustomField>
    <fullName>Total_Losses__c</fullName>
    <description>Number of lost intakes covered by this digest.</description>
    <label>Total Losses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>